# ML4G-2.0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  fly.toml  ml4g-web.service  pyproject.toml  readme.md  requirements.txt
meta/: camp_utils.py  clean-jupyter.sh  config.yaml  drive_changelog.py  google_utils.py  googletools.py  readme.md  slack_reminders.py  slide_copy.py  streamlit_utils.py  teamup_utils.py  tools.py  web.py
meta/appscript/: Code.js  ParticipantView.js  appsscript.json  readme.md
meta/career_docs/: README.md
meta/drive_changelog/: README.md  __main__.py  cli.py
meta/feedback_form_creator/: README.md  __main__.py  cli.py  config.schema.json  forms_utils.py  models.py  web.py
meta/feedback_form_creator/memes/: README.md
meta/feedback_forms/: README.md  __main__.py  cli.py  config.schema.json  config.yaml  forms_utils.py  main.py  models.py  utils.py
meta/google_ops/: README.md  __main__.py  cli.py
meta/googlesheets/: .clasp.json  UpdateDayHeaders.js
meta/notebook_tools/: README.md  __main__.py  cli.py  helpers.py
meta/one_on_ones/: README.md  __main__.py  cli.py  pairing.py  web.py
meta/pages/: career_docs.py  edit_camp.py  ta_assignment.py
meta/shared/: camps.py  google.py  storage.py
meta/slack_reminders/: README.md  __main__.py  cli.py
meta/template_duplicator/: .clasp.json  README.md
meta/template_duplicator/src/: Chips.js  Copy.js  Main.js  Menu.js  Permissions.js  Variables.js  appsscript.json
meta/timetable_tools/: ParticipantView.js  readme.md
meta/utils/: camp_utils.py  feedback_utils.py  google_forms_utils.py  google_utils.py  openai_utils.py  openrouter_utils.py  storage.py  streamlit_utils.py  teamup_utils.py
meta/web/: README.md  camps.py  feedback_parser.py  helpers.py  main.py  openrouter.py  storage.py
meta/web/pages/: career_docs.py  create_camp.py  dashboard.py  edit_camp.py  one_on_one_scheduler.py  session_feedback.py
meta/webpages/: career_docs.py  create_camp.py  dashboard.py  edit_camp.py  one_on_one_scheduler.py  session_feedback.py  ta_assignment.py
template_duplicator/src/: Debug.js  Replace.js  Util.js
tests/: sample_notebook.ipynb  sample_notebook_hard.ipynb  sample_notebook_normal.ipynb  test_sync.py
workshops/Gradient_Descent/: SGD_exercise.ipynb  SGD_solution.ipynb  SGD_tests.py
workshops/agents/: agents-complete.ipynb  agents-hard.ipynb  agents.ipynb  agents_hard.ipynb  agents_normal.ipynb
workshops/evals/: evals.ipynb  evals_hard.ipynb  evals_normal.ipynb
workshops/fsgm_patch_attack/: fsgm_patch_attack.ipynb
workshops/gradcam/: gradcam.ipynb  gradcam_hard.ipynb  gradcam_normal.ipynb
workshops/hyperparameters/: hyperparameters.ipynb
workshops/image_memory_network/: image_memoriser_tests.py  image_memory_network.ipynb  image_memory_network_normal.ipynb  utils.py  w1d4_part1_solution.py
workshops/induction_heads/: induction_heads.ipynb  induction_heads_hard.ipynb  induction_heads_normal.ipynb  tests.py
workshops/optimisation/: optim_tests.py  optimisation.ipynb  solution.py  utils.py
workshops/optimizers/: SGD_tests.py  optimizers.ipynb  optimizers_normal.ipynb
workshops/personal_benchmark/: personal_benchmark.ipynb
workshops/pytorch_tuto/: pytorch_tuto.ipynb
workshops/reasoning_models_faithfullness/: exercise.ipynb  faithfullness.py  reasoning_models_faithfullness.ipynb  reasoning_models_faithfullness_normal.ipynb  test.py  utils.py
workshops/reasoning_models_faithfullness/results/deepseek-ai/DeepSeek-R1-Distill-Llama-70B/metadata/: mmlu_global_facts_experiment_summary.json  mmlu_global_facts_flipped_answers.json  mmlu_global_facts_metadata.json
workshops/reasoning_models_faithfullness/results/deepseek-ai/DeepSeek-R1-Distill-Llama-70B/no_hint/: mmlu_global_facts_no_hint.json
workshops/rl/: A2C-workbook-complete.ipynb  A2C-workbook-empty-hard.ipynb  A2C-workbook-empty.ipynb  DQN-workbook-complete.ipynb  DQN-workbook-empty-hard.ipynb  DQN-workbook-empty.ipynb
workshops/rlhf/: rlhf.ipynb
workshops/tensors/: tensors.ipynb  tensors_normal.ipynb  utils.py
workshops/transformer/: transformer-arena.ipynb  transformer.ipynb  transformer_hard.ipynb  transformer_normal.ipynb
workshops/transformer_interp/: Transformer-Interpretebility.ipynb  exercise_hard.ipynb  exercise_normal.ipynb  logit_lens_probing_atlas_old.ipynb  solutions.ipynb  transformer_interp.ipynb  utils.py
workshops/transformer_interp/Circuits/: Solutions.ipynb  easy.ipynb  hard.ipynb  tests.py
workshops/transformer_interp/Residual_stream/: exercise_easy.ipynb  exercise_hard.ipynb  solutions.ipynb  tests.py
workshops/vanilla_policy_gradient/: vanilla_policy_gradient.ipynb
