[project]
name = "ml4g"
version = "0.1.0"
requires-python = "~=3.12.0"  # Version on colab
dependencies = [
    "black[jupyter]",
    "inquirerpy",
    "joblib>=1.4.2",
    "litellm>=1.67.0",
    "openai",
    "pandas",
    "plotly",
    "pre-commit",
    "pydantic>=2.10.0",
    "pytest",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rich",
    "slack-sdk>=3.36.0",
    "tqdm",
    "typer",
    "boto3>=1.36.23",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "streamlit-local-storage>=0.0.25",
    "streamlit-product-card>=1.0.0",
    "streamlit>=1.42.2",
]

[dependency-groups]
workshops = [
    "torch",
    "torchvision",
    "anthropic",
    "einops",
    "gymnasium",
    "inspect-ai==0.3.25",
    "ipykernel",
    "ipywidgets",
    "jaxtyping",
    "jupyter",
    "matplotlib",
    "notebook",
    "openai",
    "pandas",
    "plotly",
    "pre-commit",
    "scikit-learn",
    "toml",
    "tqdm",
    "transformer-lens",
    "transformer-utils",
    "transformers",
    "typeguard",
    "circuitsvis",
    "opencv-python",
    "python-dotenv>=1.0.1",
    "litellm>=1.67.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "joblib>=1.4.2",
    "kaleido>=1.1.0",
    "scipy>=1.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["meta"]

[tool.uv]
package = false
default-groups = "all"



# Use only pytorch-cpu as we don't do GPU intensive things in this project
# It saves a lot of disk space and download time. For GPU it's good practice to test on colab, as it's where most people will run it.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
