[project]
name = "ml4g"
version = "0.1.0"
requires-python = "~=3.12.0"  # Version on colab
dependencies = [
    "black[jupyter]",
    "inquirerpy",
    "joblib>=1.4.2",
    "litellm>=1.67.0",
    "openai",
    "pandas",
    "plotly",
    "pre-commit",
    "pydantic>=2.10.0",
    "pytest",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rich",
    "slack-sdk>=3.36.0",
    "tqdm",
    "typer",
    "boto3>=1.36.23",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "streamlit-local-storage>=0.0.25",
    "streamlit-product-card>=1.0.0",
    "streamlit>=1.42.2",
]

[dependency-groups]
dev = [
    "papermill>=2.7.0",
]
workshops = [
    "torch",
    "torchvision",
    "anthropic",
    "einops",
    "gymnasium",
    "inspect-ai==0.3.200",
    "ipykernel",
    "ipywidgets",
    "jaxtyping",
    "jupyter",
    "matplotlib",
    "notebook",
    "openai",
    "pandas",
    "plotly",
    "pre-commit",
    "scikit-learn",
    "toml",
    "tqdm",
    "transformer-lens",
    "transformer-utils",
    "transformers",
    "typeguard",
    "circuitsvis",
    "opencv-python",
    "python-dotenv>=1.0.1",
    "litellm>=1.67.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "joblib>=1.4.2",
    "kaleido>=1.1.0",
    "scipy>=1.15.2",
    "more-itertools>=11.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["meta"]

[tool.uv]
constraint-dependencies = [
    "einops==0.8.2",
    "gymnasium==1.2.3",
    "ipykernel==6.17.1",
    "ipywidgets==7.7.1",
    "joblib==1.5.3",
    "matplotlib==3.10.0",
    "notebook==6.5.7",
    "openai==2.31.0",
    "opencv-python==4.13.0.92",
    "pandas==2.2.2",
    "plotly==5.24.1",
    "pydantic==2.12.3",
    "python-dotenv==1.2.2",
    "requests==2.32.4",
    "scikit-learn==1.6.1",
    "scipy==1.16.3",
    "toml==0.10.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "transformers==5.0.0",
    "typeguard==4.5.1",
]
package = false
default-groups = "all"



# Use only pytorch-cpu as we don't do GPU intensive things in this project
# It saves a lot of disk space and download time. For GPU it's good practice to test on colab, as it's where most people will run it.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
